--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,14 @@
 .packages
 .pub-cache/
 .pub/
-build/
+
+!build/
+
+build/*
+!build/web/
+
+
+
 
 # Android related
 **/android/**/gradle-wrapper.jar
